# hacking_health_hackathon_sc_summit

./: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
hackathon/: app.py  db.py  models.py  schemas.py  settings.py
hackathon/api/: atendimento.py  consulta.py  evolucao.py  paciente.py  triagem.py
hackathon/llm/: chain.py  refine.py
hackathon/utils/: to_tb.py
templates/: base.html  cadastro.html  index.html  triagem.html
tests/: conftest.py  test_api.py
